# SpatialJustice

./: LICENSE  README.md
sj-explorer/: .gitattributes  .gitignore  pyproject.toml  requirements.md
sj-explorer/data/: Statist_UnterbezirkePolygon.geojson  administrastive_districts_dortmund_data_2024.geojson  baden_do_2026.geojson  betreutes-wohnen_do_2026.geojson  do_data2018.geojson  healthcare_Dortmund.geojson  kindergarten_do_2026.geojson  libraries.geojson  playgrounds.geojson  schulen_do_2026.geojson  senior_meetings.geojson  seniorenburos_do_2026.geojson  tagespflegeeinrichtung_2026.geojson  wochenmarkt_do_2026.geojson  youth_centers.geojson
sj-explorer/preprocessing/: extract_point_data.py
sj-explorer/preprocessing/output/: assisted_living_.csv
sj-explorer/reports/: morans_table_average_age_years.csv  morans_table_new_flats_1999_2016_pct.csv  prediction_share_65_80_pct_queen.csv
sj-explorer/src/sj/: analysis.py  io.py  main.py  points.py  prediction.py  report.py  viz.py
sj-explorer/src/sj/weights/: __init__.py  contiguity.py  distance.py  socioeconomic.py
