[project]
name = "sj-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "esda>=2.9.0",
    "geopandas>=1.1.3",
    "libpysal>=4.14.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "typer>=0.26.7",
]

[project.scripts]
sj = "sj.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sj"]
